# lfsr-seq

./: .gitignore  Makefile  README.md  REVIEW_AND_IMPROVEMENT_PLAN.md  bootstrap  lfsr-seq  profile_report_16bit.md  pyproject.toml  requirements-dev.txt  requirements.txt  strange.csv  test_single.csv  test_third.csv
dev-docs/: README.md
docs/: BUILDING.md  INSTALLATION_LOCATION.md  README.md  advanced_lfsr_structures.rst  algebraic_attacks.rst  conf.py  correlation_attacks.rst  examples.rst  index.rst  installation.rst  mathematical_background.rst  ml_integration.rst  nist_sp800_22.rst  optimization_techniques.rst  parallelization.rst  stream_ciphers.rst  theoretical_analysis.rst  time_memory_tradeoff.rst  user_guide.rst  visualization.rst
examples/: advanced_lfsr_example.py  algebraic_attack_example.py  combination_generator_config.json  correlation_attack_example.py  ml_integration_example.py  nist_test_example.py  optimization_example.py  parallel_processing_example.py  stream_cipher_example.py  theoretical_analysis_example.py  tmto_attack_example.py  visualization_example.py
lfsr/: __init__.py  analysis.py  attacks.py  benchmarking.py  cli.py  cli_advanced.py  cli_algebraic.py  cli_ciphers.py  cli_correlation.py  cli_nist.py  cli_tmto.py  constants.py  core.py  export.py  export_latex.py  field.py  formatter.py  io.py  nist.py  optimization.py  paper_generator.py  polynomial.py  reproducibility.py  sage_imports.py  statistics.py  synthesis.py  theoretical.py  theoretical_db.py  tmto.py
plans/: ADVANCED_LFSR_STRUCTURES_PLAN.md  ADVANCED_RESEARCH_TOOLS_PLAN.md  ADVANCED_VISUALIZATION_PLAN.md  ALGEBRAIC_ATTACKS_PLAN.md  CORRELATION_ATTACK_FRAMEWORK_PLAN.md  CRITICAL_EVALUATION_AND_EXPANSION_PLAN.md  FAST_CORRELATION_ATTACK_PLAN.md  FINAL_STATUS.md  NIST_SP800_22_PLAN.md  OPTIMIZATION_TECHNIQUES_PLAN.md  PARALLEL_FORK_MIGRATION_COMPLETE.md  PARALLEL_STATE_ENUMERATION_PLAN.md  PERIOD_ONLY_MODE_PLAN.md  STREAM_CIPHER_ANALYSIS_PLAN.md  THEORETICAL_ANALYSIS_PLAN.md  TIME_MEMORY_TRADEOFF_PLAN.md
scripts/: 12BIT_PROFILING_SUMMARY.md  CYCLE_DISTRIBUTION_IMPACT.md  PARALLEL_OVERHEAD_ANALYSIS.md  PARALLEL_PERFORMANCE_REPORT.md  PARALLEL_WORKER_HANG_ANALYSIS.md  PROFILING_EVALUATION.md  WORKER_REDUNDANCY_FIX_DESIGN.md  analyze_floyd_overhead.py  benchmark_static_vs_dynamic.py  benchmark_strange_csv.py  check-environment.sh  comprehensive_parallel_profiling.py  debug_worker_behavior.py  detailed_performance_analysis.py  investigate_parallel_correctness.py  investigate_parallel_overhead.py  memory_leak_analysis.md  memory_leak_fixes_summary.md  parallel_performance_profile.py  performance_profile.py  phase2_profiling_analysis.md  phase2_profiling_report.md  phase2_profiling_results.json  phase_2_2_summary.md  phase_2_3_summary.md  phase_2_4_summary.md  phase_3_1_summary.md  phase_3_2_summary.md  profile_12bit_parallel.py  profile_14bit_parallel.py  profile_14bit_parallel_v2.py  profile_16bit.py  profile_phase2_optimizations.py  profiling_12bit_v1.json  profiling_12bit_v1_fixed.json  profiling_12bit_v1_imbalance.json  (+27 more)
(+139 files in other folders)
